--- a/src/styles/layouts/home.scss
+++ b/src/styles/layouts/home.scss
@@ -24,6 +24,7 @@
     padding: $size-5;
     text-align: center;
     gap: $size-4;
+    z-index: 1;
   }
 
 }
